Submited changes from upstream to Mini.

--- a/S1 - Bienvenida, estructuras de datos y de control/S1.TU2/TUTORIAL - Estructuras de datos.ipynb
+++ b/S1 - Bienvenida, estructuras de datos y de control/S1.TU2/TUTORIAL - Estructuras de datos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-input",
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para declarar una lista inciamos abriendo un corchete (`[ ]`), escribimos uno a uno sus elementos separados por medio de comas (`,`) y finalizamos cerrando el corchete. En particular, notemos que es posible declarar listas vacías. A continuación, declaramos de forma general una lista y la almacenamos con el nombre `nombre_lista`:\n",
+    "Para declarar una lista iniciamos abriendo un corchete (`[ ]`), escribimos uno a uno sus elementos separados por medio de comas (`,`) y finalizamos cerrando el corchete. En particular, notemos que es posible declarar listas vacías. A continuación, declaramos de forma general una lista y la almacenamos con el nombre `nombre_lista`:\n",
     "\n",
     "```python\n",
     "nombre_lista = [elemento_1, elemento_2, elemento_3]\n",
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los elementos de una lista son almacenados de manera ordenada de acuerdo al orden en que se hayan declarado. Podemos consultar cada uno de ellos utilizando el índice único que Python le asigna con el fin de identificarlo. Es importante tener en cuenta que en Python los índices comienzan en el número 0. Así, el índice 0 se asigna al primer elemento de la lista, el índice 1 al segundo, etc. También es posible consultarlos utilizando una indexación negativa, en la cual el índice -1 se asigna a la última posición de la lista, el índice -2 a la penúltima, etc. La imagen a continuación ejemplifica estas dos maneras de consultar cada uno de los elementos de la lista `nombre_lista` que declaramos anteriormente."
+    "Los elementos de una lista son almacenados de manera ordenada de acuerdo al orden en que se hayan declarado. Podemos consultar cada uno de ellos utilizando el índice único que Python le asigna con el fin de identificarlo. Es importante tener en cuenta que en Python los índices comienzan en el número 0. Así, el índice 0 se asigna al primer elemento de la lista, el índice 1 al segundo, etc. También, es posible consultarlos utilizando una indexación negativa, en la cual el índice -1 se asigna a la última posición de la lista, el índice -2 a la penúltima, etc. La imagen a continuación ejemplifica estas dos maneras de consultar cada uno de los elementos de la lista `nombre_lista` que declaramos anteriormente."
    ]
   },
   {
@@ -395,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pensemos nuevamente en nuestra lista `nombre_lista` declarada anteriormente. Para aplicar una instrucción de rebanado sobre esta lista elegimos cuáles elementos queremos extraer de la lista original. Supongamos que queremos extraer únicamente los primeros dos elementos. Podemos hacerlo utilizando la siguiente instrucción: `nombre_lista[0:2]`, donde el número ubicado a la izquierda del caracter dos puntos (`:`) establece desde cuál índice realizamos nuestro rebanado (incluyéndolo), mientras que el número a la derecha establece hasta cuál índice realizamos nuestro rebanado (sin incluirlo). Si no escribimos el número a la izquierda del caracter dos puntos, el rebanado inicia desde el primer elemento. De la misma manera, si no escribimos el número a la derecha del caracter dos puntos, el rebanado finaliza en el último elemento."
+    "Pensemos nuevamente en nuestra lista `nombre_lista` declarada anteriormente. Para aplicar una instrucción de rebanado sobre esta lista elegimos cuáles elementos queremos extraer de la lista original. Supongamos que queremos extraer únicamente los primeros dos elementos. Podemos hacerlo utilizando la siguiente instrucción: `nombre_lista[0:2]`, donde el número ubicado a la izquierda del caracter dos puntos (`:`) establece desde cuál índice realizamos nuestro rebanado (incluyéndolo), mientras que el número a la derecha establece hasta cuál índice realizamos nuestro rebanado (sin incluirlo). Si no escribimos el número a la izquierda del caracter dos puntos, el rebanado inicia desde el primer elemento. De la misma manera, si no escribimos el número a la derecha del caracter dos puntos, el rebanado finaliza en el último elemento de la lista."
    ]
   },
   {
@@ -827,7 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las listas cuentan con métodos base, los cuales nos permiten realizar una diversas operaciones. Los métodos pueden retornar una nueva lista, modificar la original, o retornar un valor de interés. La siguiente tabla contiene algunos de los métodos de las listas y su descripción. "
+    "Las listas cuentan con métodos base, los cuales nos permiten realizar diversas operaciones. Los métodos pueden retornar una nueva lista, modificar la original, o retornar un valor de interés. La siguiente tabla contiene algunos de los métodos de las listas y su descripción. "
    ]
   },
   {
@@ -899,7 +899,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para cumplir con el primer requerimiento, utilizamos el método `extend`, el cual permite ingresar como parámetro una segunda lista para anexarla a la primera. Recuerda que esta operación también se puede hacer con el operador de concatenación."
+    "Para cumplir con el primer requerimiento, utilizamos el método `extend`, el cual permite ingresar como parámetro una segunda lista para anexarla a la primera. Recuerda que esta operación también se puede hacer con el operador de concatenación (+)."
    ]
   },
   {
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
        " 'Venezuela')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
        "('Ecuador', 'Bolivia', 'Venezuela')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,22 +1260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tupla_eliminatorias_2018.index(\"Colombia\")"
+    "#Recordemos que la indexación comienza en 0. Por lo tanto, sumamos 1 para conocer la posición de Colombia en la clasificación.\n",
+    "tupla_eliminatorias_2018.index(\"Colombia\") + 1"
    ]
   },
   {
@@ -1423,7 +1424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "De la misma forma que en una lista o en una tupla, los elementos de un conjunto pueden ser de cualquier tipo, un número, una lista, una tupla, una cadena de caracteres, entre otros. Siendo que los conjuntos no están indexados, no disponemos de un índice para encontrar un elemento específico de un conjunto, por lo que podemos limitarnos a consultar si un elemento existe dentro de un conjunto utilizando la siguiente sintaxis:\n",
+    "De la misma forma que en una lista o en una tupla, los elementos de un conjunto pueden ser de cualquier tipo, un número, una lista, una tupla, una cadena de caracteres, entre otros. Sin embargo, dado que los conjuntos no están indexados, no disponemos de un índice para encontrar un elemento específico de un conjunto, por lo que podemos limitarnos a consultar si un elemento existe dentro de un conjunto utilizando la siguiente sintaxis:\n",
     "\n",
     "```python\n",
     "elemento_1 in conjunto_1 \n",
@@ -1991,7 +1992,7 @@
     "|`copy()`|Retorna una copia del diccionario|\n",
     "|`items()`|Retorna una tupla con las parejas llave-valor|\n",
     "|`pop(v)`|Remueve del diccionario aquellas llaves cuyo valor sea `v`|\n",
-    "|`update(d)`|Concatena el dicccionario actual con el diccionario `d`| \n",
+    "|`update(d)`|Concatena el diccionario actual con el diccionario `d`| \n",
     "|`get(l, valor)`|Retorna el valor asociado a la llave `l` (si la llave no está en el dicccionario, retorna `valor)|\n",
     "|`dict.fromkeys(lista_llaves, valor)`|Retorna un diccionario cuyas llaves son los elementos de `lista_llaves` y el valor de todas es `valor`|"
    ]
@@ -2131,7 +2132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
