Submited changes from upstream to Mini.

--- a/S3 - Librerias para manejo de datos/S3.TU1/TUTORIAL - Librerias para manejo de datos.ipynb
+++ b/S3 - Librerias para manejo de datos/S3.TU1/TUTORIAL - Librerias para manejo de datos.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En programación, una librería es un conjunto de funcionalidades que ya están escritas y podemos llamar para utilizarlas en nuestros programas. La librería `numpy` nos ofrece la posibilidad de crear arreglos y matrices multidimensionales, lo cual nos permite estructurar datos, con el fin de analizarlos más adelante. Por otro lado, `pandas` es una librería de Python que ofrece la posibilidad de manipular y explorar datos que forma fácil y rápida."
+    "En programación, una librería es un conjunto de funcionalidades que ya están escritas y podemos llamar para utilizarlas en nuestros programas. La librería `numpy` nos ofrece la posibilidad de crear arreglos y matrices multidimensionales lo cual nos permite estructurar datos, con el fin de analizarlos más adelante. Por otro lado, `pandas` es una librería de Python que ofrece la posibilidad de manipular y explorar datos que forma fácil y rápida."
    ]
   },
   {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -1825,7 +1825,7 @@
        "8    Silvana    43       109      Buenos Aires"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2260,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -2271,7 +2271,7 @@
        "array(['Bogotá', 'Lima', 'Buenos Aires', 'La Paz'], dtype=object)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2836,7 +2836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
