Submited changes from upstream to Mini.

--- a/S2 - Funciones, manejo de archivos y visualizacion/S2.TU2/TUTORIAL - Manejo de archivos.ipynb
+++ b/S2 - Funciones, manejo de archivos y visualizacion/S2.TU2/TUTORIAL - Manejo de archivos.ipynb
@@ -930,7 +930,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"Archivos/mfh.txt\", \"r\") as mfh:  #ACÁ DE PRONTO NO ES CLARO LO DEL GRAND PORQUE A VECES NO MUESTRA LA TABLA COMPLETA.\n",
+    "with open(\"Archivos/mfh.txt\", \"r\") as mfh:  \n",
     "    # Leemos el archivo y lo almacenamos en una sola cadena de caracteres\n",
     "    mfh = mfh.read()\n",
     "    # Seleccionamos la cadena de caracteres que se encuentra entre la palabra 'Period' y la palabra 'Grand'\n",
