Submited changes from upstream to Mini.

--- a/S2 - Funciones, manejo de archivos y visualizacion/S2.TU2/TUTORIAL - Manejo de archivos.ipynb
+++ b/S2 - Funciones, manejo de archivos y visualizacion/S2.TU2/TUTORIAL - Manejo de archivos.ipynb
@@ -879,7 +879,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Requerimos analizar la distribución del monto de títulos del tesoro americano de los Estados Unidos que se encuentra en cuentas afuera de su país. El archivo `\"mfh.txt\"` (*Major foreign holders*) recopila esta información para los países donde se concentran un mayor montor de estos títulos. En relación con este archivo se nos solicita inspeccionar el archivo, guardar en una lista la información de los tenedores de bonos en el tiempo, y eliminar el encabezado, las líneas vacías y el gran total del monto de los títulos del tesoro americano."
+    "Requerimos analizar la distribución del monto de títulos del tesoro americano de los Estados Unidos que se encuentra en cuentas extranjeras. El archivo `\"mfh.txt\"` (*Major foreign holders*) recopila esta información para los países donde se concentra el mayor monto de estos títulos. En relación con este archivo se nos solicita inspeccionar el archivo, guardar en una lista la información de los tenedores de bonos en el tiempo, y eliminar el encabezado, las líneas vacías y el gran total del monto de los títulos del tesoro americano."
    ]
   },
   {
