--- a/S4 - Explorar, modificar y visualizar bases de datos/S4.TU1/TUTORIAL - Explorar bases de datos.ipynb
+++ b/S4 - Explorar, modificar y visualizar bases de datos/S4.TU1/TUTORIAL - Explorar bases de datos.ipynb
@@ -111,12 +111,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importamos el paquete `pandas`."
+    "Importamos los paquetes `pandas` y `numpy` ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true,
     "tags": [
@@ -947,7 +947,7 @@
        "[216092 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,12 @@
     }
    ],
    "source": [
+    "#Obtenemosla lista de columnas del DataFrame y con .str tomamos para cada una\n",
+    "#lo que está después de \"medios_\" (por eso el [7:])\n",
     "df_covid_19.columns = df_covid_19.columns.str[7:]\n",
+    "\n",
+    "#Separamos las cadenas de texto al encontrar un \"_\"\n",
+    "#El parámetro expand nos indica si deseamos dividir la cadena en columnas separadas (creando el multiindex)\n",
     "indice_multiple_columnas = df_covid_19.columns.str.split(\"_\", expand = True)\n",
     "indice_multiple_columnas"
    ]
@@ -1293,6 +1298,7 @@
     }
    ],
    "source": [
+    "#Reasignamos el multinindex que creamos antes a las columnas del DataFrame (df)\n",
     "df_covid_19.columns = indice_multiple_columnas\n",
     "df_covid_19"
    ]
@@ -2461,7 +2467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
