Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU1/TUTORIAL - Limpiar bases de datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU1/TUTORIAL - Limpiar bases de datos.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Con lo aprendido hasta ahora, somo capaces de cargar un `DataFrame` que contenga los datos a analizar. Además, podemos indexar este `DataFrame` en las filas según el contexto del problema y renombrar sus columnas según las prácticas recomendadas. No obstante, antes de realizar un análisis de datos, debemos revisar algunos aspectos importantes del manejo de bases de datos. Aprenderemos acerca de las estrategias que podemos aplicar sobre registros faltantes, y sobre el manejo de cadenas de texto y su transformación a fechas en los `DataFrame`."
+    "Con lo aprendido hasta ahora, somos capaces de cargar un `DataFrame` que contenga los datos a analizar. Además, podemos indexar este `DataFrame` en las filas según el contexto del problema y renombrar sus columnas según las prácticas recomendadas. No obstante, antes de realizar un análisis de datos, debemos revisar algunos aspectos importantes del manejo de bases de datos. Aprenderemos acerca de las estrategias que podemos aplicar sobre registros faltantes, y sobre el manejo de cadenas de texto y su transformación a fechas en los `DataFrame`."
    ]
   },
   {
@@ -94,7 +94,7 @@
    "source": [
     "A continuación explicamos la documentación de algunos de los métodos más comunes: `split`, `get_dummies`, `capitalize`, `lower`, `upper` y `strip`.\n",
     "\n",
-    "* `split`: divide cada cadena del `Series` cada vez que encuentra la subcadena especificada en el parámetro `pat`. Utilizamos el parámetro `n` para limitar la cantidad de divisiones que realizamos las cadenas. Utilizamos el parámetro expand para retornar los segmentos de las cadenas en un `DataFrame` (`expand = True`) o en un `Series` de listas (`expand = false`). <br><br>\n",
+    "* `split`: divide cada cadena del `Series` cada vez que encuentra la subcadena especificada en el parámetro `pat`. Utilizamos el parámetro `n` para limitar la cantidad de divisiones que realizamos en las cadenas. Utilizamos el parámetro expand para retornar los segmentos de las cadenas en un `DataFrame` (`expand = True`) o en un `Series` de listas (`expand = false`). <br><br>\n",
     "\n",
     "* `get_dummies`: crea un `DataFrame` donde las columnas corresponden a cada uno de los valores únicos del `Series`, las filas corresponden a los elementos del `Series` y los valores son binarios (`0` o `1`) dependiendo de si el elemento toma el valor que indica la columna.<br><br>\n",
     "\n",
