--- a/S5 - Extraer, transformar y cargar datos/S5.TU2/TUTORIAL - Unir bases de datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU2/TUTORIAL - Unir bases de datos.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "    * `how=\"outer\"`: el `DataFrame` resultante tendrá todas las filas de ambos `DataFrame`, ya que se aceptan todas las coincidencias y no coincidencias de ambos `DataFrame`. \n",
     "\n",
-    "    * `how=\"inner\"`: el `DataFrame` resultante solo tendrá los índices que exisan en ambos `DataFrame`.<br><br>\n",
+    "    * `how=\"inner\"`: el `DataFrame` resultante solo tendrá los índices que existan en ambos `DataFrame`.<br><br>\n",
     "\n",
     "* `lsufix`: si hay una o más columnas que tienen el mismo nombre en ambos `DataFrame`, se le puede asignar un sufijo a las columnas del `DataFrame` que llama al método para así diferenciarlas de las columnas del otro `DataFrame`.<br><br>\n",
     "\n",
