Submited changes from upstream to Mini.

--- a/S7 - Visualizacion e interactividad/S7.TU1/TUTORIAL - Visualizacion avanzada.ipynb
+++ b/S7 - Visualizacion e interactividad/S7.TU1/TUTORIAL - Visualizacion avanzada.ipynb
@@ -959,9 +959,7 @@
    "execution_count": null,
    "metadata": {
     "scrolled": true,
-    "tags": [
-     "output_scroll"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
