Submited changes from upstream to Mini.

--- a/S7 - Visualizacion e interactividad/S7.TU1/TUTORIAL - Visualizacion avanzada.ipynb
+++ b/S7 - Visualizacion e interactividad/S7.TU1/TUTORIAL - Visualizacion avanzada.ipynb
@@ -290,7 +290,7 @@
     "| <center>Método<center> | <center>Tipo de visualización<center> | \n",
     "| :--- | :--- | \n",
     "| `Scatter` | Gráfico de línea, dispersión y burbuja |\n",
-    "| `Hist` | Histogramas |\n",
+    "| `Histogram` | Histogramas |\n",
     "| `Bar` | Gráfico de barras |\n",
     "| `Waterfall` | Gráfico de cascada |\n",
     "| `Pie` | Diagrama de torta |\n",
