Submited changes from upstream to Mini.

--- a/S2 - Funciones, manejo de archivos y visualizacion/S2.TU1/TUTORIAL - Funciones.ipynb
+++ b/S2 - Funciones, manejo de archivos y visualizacion/S2.TU1/TUTORIAL - Funciones.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ejemplo 3"
+    "#### Ejemplo 1"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ejemplo 4"
+    "#### Ejemplo 2"
    ]
   },
   {
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ejemplo 5"
+    "#### Ejemplo 3"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ejemplo 6"
+    "#### Ejemplo 4"
    ]
   },
   {
@@ -401,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ejemplo 7"
+    "#### Ejemplo 5"
    ]
   },
   {
@@ -518,7 +518,7 @@
    "source": [
     "__Autores__: Camilo Falla Moreno, Juan David Reyes, Alejandro Mantilla Redondo,Diego Alejandro Cely Gómez\n",
     " \n",
-    "__Fecha última actualización__: 12/07/2022"
+    "__Fecha última actualización__: 09/09/2024, Revisado por: Jose Fernando Barrera"
    ]
   }
  ],
