Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -1663,7 +1663,7 @@
    "source": [
     "**Autores:** Alejandro Mantilla Redondo, Diego Alejandro Cely Gómez\n",
     "\n",
-    "**Fecha última actualización:** 15/09/2022"
+    "**Fecha última actualización:** 09/09/2024 Jose Fernando Barrera"
    ]
   }
  ],
