Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -370,7 +370,8 @@
     "\n",
     "# La transformacion map toma cada objeto contenido en el RDD y ejecuta la funcion que recibe por parametro.\n",
     "nuevo_rdd = rdd.map(mult)\n",
-    "nuevo_rdd"
+    "result = nuevo_rdd.collect()\n",
+    "print(result)"
    ]
   },
   {
