--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -199,6 +199,7 @@
    "source": [
     "# Importamos la clase SparkSession\n",
     "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, IntegerType\n",
     "\n",
     "# Invocamos un constructor de sesiones de Spark SQL\n",
     "spark = SparkSession.builder\n",
@@ -364,12 +365,15 @@
     }
    ],
    "source": [
-    "# Declaramos una funcion que tome los elementos con indice 1 y 2 de un iterable y los multiplique.\n",
+    "# Opcional: Declaramos una funcion que tome los elementos con indice 1 y 2 de un iterable y los multiplique.\n",
     "def mult(x):\n",
     "    return x[1] * x[2]\n",
     "\n",
+    "# Opcional: Pasamos la función como parámetro a map\n",
+    "#nuevo_rdd = rdd.map(mult)\n",
+    "\n",
     "# La transformacion map toma cada objeto contenido en el RDD y ejecuta la funcion que recibe por parametro.\n",
-    "nuevo_rdd = rdd.map(mult)\n",
+    "nuevo_rdd = rdd.map(lambda x: x[1] * x[2])\n",
     "result = nuevo_rdd.collect()\n",
     "print(result)"
    ]
@@ -477,8 +481,15 @@
     }
    ],
    "source": [
-    "columns = [\"Nombre\", \"Descargas\", \"Lineas_de_codigo\", \"Region\"]\n",
-    "df = spark.createDataFrame(data=data_list, schema=columns)\n",
+    "# Define schema explicitly\n",
+    "schema = StructType([\n",
+    "    StructField(\"Nombre\", StringType(), True),\n",
+    "    StructField(\"Descargas\", IntegerType(), True),\n",
+    "    StructField(\"Lineas_de_codigo\", IntegerType(), True),\n",
+    "    StructField(\"Region\", StringType(), True)\n",
+    "])\n",
+    "# Nombres de las columnas columns = [\"Nombre\", \"Descargas\", \"Lineas_de_codigo\", \"Region\"]\n",
+    "df = spark.createDataFrame(data=data_list, schema=schema)\n",
     "df"
    ]
   },
@@ -863,13 +874,21 @@
     }
    ],
    "source": [
+    "schema = StructType([\n",
+    "    StructField(\"A\", IntegerType(), True),\n",
+    "    StructField(\"B\", IntegerType(), True),\n",
+    "    StructField(\"C\", IntegerType(), True),\n",
+    "    StructField(\"D\", IntegerType(), True)\n",
+    "])\n",
+    "\n",
     "data = [[1   , None, None, 2   ],\n",
     "        [None, None, 1   , None],\n",
     "        [None, 0   , None, 2   ]]\n",
     "\n",
     "columns = [\"A\", \"B\", \"C\", \"D\"]\n",
     "\n",
-    "df_numeros = spark.createDataFrame(data=data, schema=columns)\n",
+    "# En versiones con inferencia de tipo: df_numeros = spark.createDataFrame(data=data, schema=columns)\n",
+    "df_numeros = spark.createDataFrame(data=data, schema=schema)\n",
     "df_numeros.show()"
    ]
   },
@@ -1017,13 +1036,18 @@
     }
    ],
    "source": [
+    "schema = StructType([\n",
+    "    StructField(\"A\", IntegerType(), True),\n",
+    "    StructField(\"B\", IntegerType(), True)\n",
+    "])\n",
+    "\n",
     "data = [[1, 2],\n",
     "        [3, 4],\n",
     "        [1, 3]]\n",
     "\n",
     "columns = [\"A\", \"B\"]\n",
     "\n",
-    "df1 = spark.createDataFrame(data = data, schema=columns)\n",
+    "df1 = spark.createDataFrame(data = data, schema=schema)\n",
     "df1.show()"
    ]
   },
@@ -1047,12 +1071,17 @@
     }
    ],
    "source": [
+    "schema = StructType([\n",
+    "    StructField(\"A\", IntegerType(), True),\n",
+    "    StructField(\"B\", IntegerType(), True)\n",
+    "])\n",
+    "\n",
     "data = [[3, 2, 4],\n",
     "        [3, 4, 1]]\n",
     "\n",
     "columns = [\"B\", \"C\", \"D\"]\n",
     "\n",
-    "df2 = spark.createDataFrame(data = data, schema=columns)\n",
+    "df2 = spark.createDataFrame(data = data, schema=schema)\n",
     "df2.show()"
    ]
   },
