Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -366,16 +366,23 @@
    ],
    "source": [
     "# Opcional: Declaramos una funcion que tome los elementos con indice 1 y 2 de un iterable y los multiplique.\n",
-    "def mult(x):\n",
-    "    return x[1] * x[2]\n",
+    "def mult_elements(partition):\n",
+    "    for x in partition:\n",
+    "        yield x[1] * x[2]\n",
     "\n",
     "# Opcional: Pasamos la función como parámetro a map\n",
-    "#nuevo_rdd = rdd.map(mult)\n",
+    "nuevo_rdd = rdd.map(mult_elements)\n",
     "\n",
     "# La transformacion map toma cada objeto contenido en el RDD y ejecuta la funcion que recibe por parametro.\n",
-    "nuevo_rdd = rdd.map(lambda x: x[1] * x[2])\n",
-    "result = nuevo_rdd.collect()\n",
-    "print(result)"
+    "#nuevo_rdd = rdd.map(lambda x: x[1] * x[2])\n",
+    "#result = nuevo_rdd.collect()\n",
+    "\n",
+    "# Podemos tomar la versión en pandas DataFrame\n",
+    "df = spark.createDataFrame(data_list, [\"Program\", \"Value1\", \"Value2\", \"Region\"])\n",
+    "\n",
+    "# Perform a simple transformation using Spark DataFrame API (Traído directamente de la documentación de Pyspark)\n",
+    "df = df.withColumn(\"Product\", df[\"Value1\"] * df[\"Value2\"])\n",
+    "df.show()"
    ]
   },
   {
