Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -200,6 +200,10 @@
     "# Importamos la clase SparkSession\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import StructType, StructField, StringType, IntegerType\n",
+    "import cloudpickle\n",
+    "import pyspark\n",
+    "print(f\"Cloudpickle version: {cloudpickle.__version__}\")\n",
+    "print(f\"PySpark version: {pyspark.__version__}\")\n",
     "\n",
     "# Invocamos un constructor de sesiones de Spark SQL\n",
     "spark = SparkSession.builder\n",
@@ -221,6 +225,7 @@
     "\n",
     "# Aunque no lo recomendamos para tu desarrollo, apagaremos las advertencias de este notebook.\n",
     "spark.sparkContext.setLogLevel(\"OFF\")\n",
+    "spark.catalog.clearCache()\n",
     "spark"
    ]
   },
