--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -204,7 +204,7 @@
     "import pyspark\n",
     "print(f\"Cloudpickle version: {cloudpickle.__version__}\")\n",
     "print(f\"PySpark version: {pyspark.__version__}\")\n",
-    "\n",
+    "print(\"Now the Spark version ... \")\n",
     "# Invocamos un constructor de sesiones de Spark SQL\n",
     "spark = SparkSession.builder\n",
     "\n",
