Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -200,6 +200,7 @@
     "# Importamos la clase SparkSession\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import StructType, StructField, StringType, IntegerType\n",
+    "!pip install cloudpickle\n",
     "import cloudpickle\n",
     "import pyspark\n",
     "print(f\"Cloudpickle version: {cloudpickle.__version__}\")\n",
