Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -200,7 +200,7 @@
     "# Importamos la clase SparkSession\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import StructType, StructField, StringType, IntegerType\n",
-    "!pip install cloudpickle\n",
+    "!pip install cloudpickle==2.0.0 \n",
     "import cloudpickle\n",
     "import pyspark\n",
     "print(f\"Cloudpickle version: {cloudpickle.__version__}\")\n",
@@ -383,8 +383,16 @@
     "#nuevo_rdd = rdd.map(lambda x: x[1] * x[2])\n",
     "#result = nuevo_rdd.collect()\n",
     "\n",
+    "# Nombres para las columnas al interior de la tabla:\n",
+    "schema = StructType([\n",
+    "    StructField(\"Program\", StringType(), True),\n",
+    "    StructField(\"Value1\", IntegerType(), True),\n",
+    "    StructField(\"Value2\", IntegerType(), True),\n",
+    "    StructField(\"Region\", StringType(), True)\n",
+    "])\n",
+    "\n",
     "# Podemos tomar la versión en pandas DataFrame\n",
-    "df = spark.createDataFrame(data_list, [\"Program\", \"Value1\", \"Value2\", \"Region\"])\n",
+    "df = spark.createDataFrame(data_list, schema)\n",
     "\n",
     "# Perform a simple transformation using Spark DataFrame API (Traído directamente de la documentación de Pyspark)\n",
     "df = df.withColumn(\"Product\", df[\"Value1\"] * df[\"Value2\"])\n",
