Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -200,12 +200,10 @@
     "# Importamos la clase SparkSession\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import StructType, StructField, StringType, IntegerType\n",
-    "!pip install cloudpickle==2.0.0 \n",
-    "import cloudpickle\n",
     "import pyspark\n",
-    "print(f\"Cloudpickle version: {cloudpickle.__version__}\")\n",
+    "#print(f\"Cloudpickle version: {cloudpickle.__version__}\")\n",
     "print(f\"PySpark version: {pyspark.__version__}\")\n",
-    "print(\"Now the Spark version ... \")\n",
+    "#print(\"Now the Spark version ... \")\n",
     "# Invocamos un constructor de sesiones de Spark SQL\n",
     "spark = SparkSession.builder\n",
     "\n",
@@ -392,7 +390,7 @@
     "])\n",
     "\n",
     "# Podemos tomar la versión en pandas DataFrame\n",
-    "df = spark.createDataFrame(data_list, schema)\n",
+    "df = spark.createDataFrame(rdd, schema)\n",
     "\n",
     "# Perform a simple transformation using Spark DataFrame API (Traído directamente de la documentación de Pyspark)\n",
     "df = df.withColumn(\"Product\", df[\"Value1\"] * df[\"Value2\"])\n",
