--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -143,23 +143,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/15 08:09:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/09/15 08:09:21 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
+      "Requirement already satisfied: pandas in c:\\users\\jose\\anaconda3\\lib\\site-packages (1.3.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\jose\\anaconda3\\lib\\site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\jose\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\jose\\anaconda3\\lib\\site-packages (from pandas) (1.20.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\jose\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
+      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
+      "Collecting pyspark\n",
+      "  Downloading pyspark-3.5.2.tar.gz (317.3 MB)\n",
+      "Collecting py4j==0.10.9.7\n",
+      "  Downloading py4j-0.10.9.7-py2.py3-none-any.whl (200 kB)\n",
+      "Building wheels for collected packages: pyspark\n",
+      "  Building wheel for pyspark (setup.py): started\n",
+      "  Building wheel for pyspark (setup.py): finished with status 'done'\n",
+      "  Created wheel for pyspark: filename=pyspark-3.5.2-py2.py3-none-any.whl size=317812390 sha256=35fd3ab640f98cdf137b297159a63ef2cf733ac0716aa74fc9777ee3e547e148\n",
+      "  Stored in directory: C:\\Users\\JOSE\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-ffesuy5u\\wheels\\cf\\78\\83\\c9bd35876d37623b75182ff914c58a38a77ec7db74905b13ab\n",
+      "Successfully built pyspark\n",
+      "Installing collected packages: py4j, pyspark\n",
+      "Successfully installed py4j-0.10.9.7 pyspark-3.5.2\n",
+      "PySpark version it should be 3.x.x: 3.5.2\n"
      ]
     },
     {
@@ -172,11 +182,11 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://alejoman-pc:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://DESKTOP-4S8IQQO:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v3.3.0</code></dd>\n",
+       "                <dd><code>v3.5.2</code></dd>\n",
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
@@ -188,10 +198,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f184850d220>"
+       "<pyspark.sql.session.SparkSession at 0x1bc1dcd3490>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ParallelCollectionRDD[0] at readRDDFromFile at PythonRDD.scala:274"
+       "ParallelCollectionRDD[0] at readRDDFromFile at PythonRDD.scala:289"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +370,7 @@
     {
      "data": {
       "text/plain": [
-       "PythonRDD[1] at RDD at PythonRDD.scala:53"
+       "DataFrame[Program: string, Value1: int, Value2: int, Region: string, Product: int]"
       ]
      },
      "execution_count": 4,
@@ -379,7 +389,7 @@
     "\n",
     "# La transformacion map toma cada objeto contenido en el RDD y ejecuta la funcion que recibe por parametro.\n",
     "#nuevo_rdd = rdd.map(lambda x: x[1] * x[2])\n",
-    "#result = nuevo_rdd.collect()\n",
+    "result = nuevo_rdd.collect()\n",
     "\n",
     "# Nombres para las columnas al interior de la tabla:\n",
     "schema = StructType([\n",
@@ -394,7 +404,7 @@
     "\n",
     "# Perform a simple transformation using Spark DataFrame API (Traído directamente de la documentación de Pyspark)\n",
     "df = df.withColumn(\"Product\", df[\"Value1\"] * df[\"Value2\"])\n",
-    "df.show()"
+    "print(result)"
    ]
   },
   {
@@ -1718,9 +1728,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "IPython (myenv)",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1732,7 +1742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
