--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -143,33 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Requirement already satisfied: pandas in c:\\users\\jose\\anaconda3\\lib\\site-packages (1.3.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\jose\\anaconda3\\lib\\site-packages (from pandas) (2021.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\jose\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\jose\\anaconda3\\lib\\site-packages (from pandas) (1.20.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\jose\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
-      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Collecting pyspark\n",
-      "  Downloading pyspark-3.5.2.tar.gz (317.3 MB)\n",
-      "Collecting py4j==0.10.9.7\n",
-      "  Downloading py4j-0.10.9.7-py2.py3-none-any.whl (200 kB)\n",
-      "Building wheels for collected packages: pyspark\n",
-      "  Building wheel for pyspark (setup.py): started\n",
-      "  Building wheel for pyspark (setup.py): finished with status 'done'\n",
-      "  Created wheel for pyspark: filename=pyspark-3.5.2-py2.py3-none-any.whl size=317812390 sha256=35fd3ab640f98cdf137b297159a63ef2cf733ac0716aa74fc9777ee3e547e148\n",
-      "  Stored in directory: C:\\Users\\JOSE\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-ffesuy5u\\wheels\\cf\\78\\83\\c9bd35876d37623b75182ff914c58a38a77ec7db74905b13ab\n",
-      "Successfully built pyspark\n",
-      "Installing collected packages: py4j, pyspark\n",
-      "Successfully installed py4j-0.10.9.7 pyspark-3.5.2\n",
-      "PySpark version it should be 3.x.x: 3.5.2\n"
+      "22/09/15 08:09:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/09/15 08:09:21 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     },
     {
@@ -182,11 +172,11 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://DESKTOP-4S8IQQO:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://alejoman-pc:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v3.5.2</code></dd>\n",
+       "                <dd><code>v3.3.0</code></dd>\n",
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
@@ -198,10 +188,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x1bc1dcd3490>"
+       "<pyspark.sql.session.SparkSession at 0x7f184850d220>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,11 +199,7 @@
    "source": [
     "# Importamos la clase SparkSession\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.types import StructType, StructField, StringType, IntegerType\n",
-    "import pyspark\n",
-    "#print(f\"Cloudpickle version: {cloudpickle.__version__}\")\n",
-    "print(f\"PySpark version it should be 3.x.x: {pyspark.__version__}\")\n",
-    "#print(\"Now the Spark version ... \")\n",
+    "\n",
     "# Invocamos un constructor de sesiones de Spark SQL\n",
     "spark = SparkSession.builder\n",
     "\n",
@@ -234,7 +220,6 @@
     "\n",
     "# Aunque no lo recomendamos para tu desarrollo, apagaremos las advertencias de este notebook.\n",
     "spark.sparkContext.setLogLevel(\"OFF\")\n",
-    "spark.catalog.clearCache()\n",
     "spark"
    ]
   },
@@ -309,16 +294,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ParallelCollectionRDD[0] at readRDDFromFile at PythonRDD.scala:289"
+       "ParallelCollectionRDD[0] at readRDDFromFile at PythonRDD.scala:274"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +355,7 @@
     {
      "data": {
       "text/plain": [
-       "DataFrame[Program: string, Value1: int, Value2: int, Region: string, Product: int]"
+       "PythonRDD[1] at RDD at PythonRDD.scala:53"
       ]
      },
      "execution_count": 4,
@@ -379,31 +364,13 @@
     }
    ],
    "source": [
-    "# Opcional: Declaramos una funcion que tome los elementos con indice 1 y 2 de un iterable y los multiplique.\n",
-    "def mult_elements(partition):\n",
-    "    for x in partition:\n",
-    "        yield x[1] * x[2]\n",
-    "\n",
-    "# Opcional: Pasamos la función como parámetro a map\n",
-    "nuevo_rdd = rdd.map(mult_elements)\n",
+    "# Declaramos una funcion que tome los elementos con indice 1 y 2 de un iterable y los multiplique.\n",
+    "def mult(x):\n",
+    "    return x[1] * x[2]\n",
     "\n",
     "# La transformacion map toma cada objeto contenido en el RDD y ejecuta la funcion que recibe por parametro.\n",
-    "#nuevo_rdd = rdd.map(lambda x: x[1] * x[2])\n",
+    "nuevo_rdd = rdd.map(mult)\n",
     "result = nuevo_rdd.collect()\n",
-    "\n",
-    "# Nombres para las columnas al interior de la tabla:\n",
-    "schema = StructType([\n",
-    "    StructField(\"Program\", StringType(), True),\n",
-    "    StructField(\"Value1\", IntegerType(), True),\n",
-    "    StructField(\"Value2\", IntegerType(), True),\n",
-    "    StructField(\"Region\", StringType(), True)\n",
-    "])\n",
-    "\n",
-    "# Podemos tomar la versión en pandas DataFrame\n",
-    "df = spark.createDataFrame(rdd, schema)\n",
-    "\n",
-    "# Perform a simple transformation using Spark DataFrame API (Traído directamente de la documentación de Pyspark)\n",
-    "df = df.withColumn(\"Product\", df[\"Value1\"] * df[\"Value2\"])\n",
     "print(result)"
    ]
   },
@@ -510,15 +477,8 @@
     }
    ],
    "source": [
-    "# Define schema explicitly\n",
-    "schema = StructType([\n",
-    "    StructField(\"Nombre\", StringType(), True),\n",
-    "    StructField(\"Descargas\", IntegerType(), True),\n",
-    "    StructField(\"Lineas_de_codigo\", IntegerType(), True),\n",
-    "    StructField(\"Region\", StringType(), True)\n",
-    "])\n",
-    "# Nombres de las columnas columns = [\"Nombre\", \"Descargas\", \"Lineas_de_codigo\", \"Region\"]\n",
-    "df = spark.createDataFrame(data=data_list, schema=schema)\n",
+    "columns = [\"Nombre\", \"Descargas\", \"Lineas_de_codigo\", \"Region\"]\n",
+    "df = spark.createDataFrame(data=data_list, schema=columns)\n",
     "df"
    ]
   },
@@ -903,21 +863,13 @@
     }
    ],
    "source": [
-    "schema = StructType([\n",
-    "    StructField(\"A\", IntegerType(), True),\n",
-    "    StructField(\"B\", IntegerType(), True),\n",
-    "    StructField(\"C\", IntegerType(), True),\n",
-    "    StructField(\"D\", IntegerType(), True)\n",
-    "])\n",
-    "\n",
     "data = [[1   , None, None, 2   ],\n",
     "        [None, None, 1   , None],\n",
     "        [None, 0   , None, 2   ]]\n",
     "\n",
     "columns = [\"A\", \"B\", \"C\", \"D\"]\n",
     "\n",
-    "# En versiones con inferencia de tipo: df_numeros = spark.createDataFrame(data=data, schema=columns)\n",
-    "df_numeros = spark.createDataFrame(data=data, schema=schema)\n",
+    "df_numeros = spark.createDataFrame(data=data, schema=columns)\n",
     "df_numeros.show()"
    ]
   },
@@ -1065,18 +1017,13 @@
     }
    ],
    "source": [
-    "schema = StructType([\n",
-    "    StructField(\"A\", IntegerType(), True),\n",
-    "    StructField(\"B\", IntegerType(), True)\n",
-    "])\n",
-    "\n",
     "data = [[1, 2],\n",
     "        [3, 4],\n",
     "        [1, 3]]\n",
     "\n",
     "columns = [\"A\", \"B\"]\n",
     "\n",
-    "df1 = spark.createDataFrame(data = data, schema=schema)\n",
+    "df1 = spark.createDataFrame(data = data, schema=columns)\n",
     "df1.show()"
    ]
   },
@@ -1100,17 +1047,12 @@
     }
    ],
    "source": [
-    "schema = StructType([\n",
-    "    StructField(\"A\", IntegerType(), True),\n",
-    "    StructField(\"B\", IntegerType(), True)\n",
-    "])\n",
-    "\n",
     "data = [[3, 2, 4],\n",
     "        [3, 4, 1]]\n",
     "\n",
     "columns = [\"B\", \"C\", \"D\"]\n",
     "\n",
-    "df2 = spark.createDataFrame(data = data, schema=schema)\n",
+    "df2 = spark.createDataFrame(data = data, schema=columns)\n",
     "df2.show()"
    ]
   },
@@ -1728,9 +1670,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IPython (myenv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1742,7 +1684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
